[project]
name = "us-healthcare-ehr"
version = "0.1.0"
description = "Reproducible EHR dataset analysis workflows (ARMD + others)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Harman" }]
dependencies = [
  "pandas>=2.2",
  "pyarrow>=16",
  "typer>=0.12",
  "rich>=13.7",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
viz = [
  "matplotlib>=3.9",
  "plotly>=5.22",
]
app = [
  "streamlit>=1.37",
  "plotly>=5.22",
]

[project.scripts]
ehr = "us_healthcare.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
